--- a/QUESTIONS/REACT/FACEBOOK/public/index.html
+++ b/QUESTIONS/REACT/FACEBOOK/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="https://www.google.com/favicon.ico">
-    <title>Layout</title>
+    <title>Facebook</title>
   </head>
   <body>
     <noscript>
